--- a/src/components/DetailsInfo/DetailsInfo.css
+++ b/src/components/DetailsInfo/DetailsInfo.css
@@ -1,12 +1,16 @@
 .DetailsInfo {
-    width: 49%;
     background-color: rgb(18, 18, 68);
     padding: 15px;
     border-radius: 10px;
+    text-align: center;
 }
 
 .DetailsInfo .info_block{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
     align-items: center;
+    
 }
 
 .DetailsInfo .info_block img {
@@ -16,4 +20,9 @@
 .DetailsInfo .detail_info_block {
     list-style: none;
     padding-left: 15px;
+}
+
+.detail_info_block li{
+    font-size: 24px;
+    margin-bottom: 10px;
 }
