updage PlanetPage, add Starships

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -2,4 +2,7 @@
     margin: 0 auto;
     width: 80%;
     padding: 20px 0;
+    /* background-image: url(./space.jpg);
+    background-repeat: no-repeat;
+    background-size: cover; */
 }
