--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -6,3 +6,8 @@
     background-repeat: no-repeat;
     background-size: cover; */
 }
+
+body {
+    background-image: url(./space.jpg);
+    background-size: cover;
+}
